--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
          <ul>
            <li><a href="index.html">Home</a></li>
            <li><a href="pagina01.html">Ação</a></li>
-           <li><a href="pagina02.html">Aventura</a></li>
-           <li><a href="pagina03.html">Animação</a></li>
-           <li><a href="pagina04.html">Romance</a></li>
+           <li><a href="pagina02.html">Drama</a></li>
+           <li><a href="pagina03.html">Comédia</a></li>
+           <li><a href="pagina04.html">Fantasia</a></li>
          </ul>
        </nav>
     </div>
@@ -26,7 +26,7 @@
 
     </div>
     <div class="rodape">
-         Tamires
+         Tamires Silva Faria N32
     </div>
 
 
