--- a/pagina01.html
+++ b/pagina01.html
@@ -13,24 +13,24 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pagina01.html">Ação</a></li>
-            <li><a href="pagina02.html">Aventura</a></li>
-            <li><a href="pagina03.html">Animação</a></li>
-            <li><a href="pagina04.html">Romance</a></li>
+            <li><a href="pagina02.html">Drama</a></li>
+            <li><a href="pagina03.html">Comédia</a></li>
+            <li><a href="pagina04.html">Fantasia</a></li>
           </ul>
         </nav>
      </div>
      <div class="conteudo">
-       <h1>“As leis da natureza transcendem as leis do homem.”</h1>
-       <h1> Vingadores</h1>
-       <h2> Vingadores: Ultimato</h2>
-       <h2> Batman-O Cavaleiro das Trevas</h2>
-       <h2> Matrix</h2>
-       <h2> Homem-Aranha: Sem Volta para Casa</h2>
-       <h2> Star Wars: O Despertar da Força</h2>
-       <h2> Guardiões da Galáxia</h2>
-       <h2> Piratas do Caribe - A Maldição do Pérola Negra</h2>
-       <h2> Velozes & Furiosos 7</h2>
-       <h2> Deadpool</h2>
-       <h2> O Hobbit: A Batalha dos Cinco Exércitos</h2>
+       <h1> “Cada ferida é uma lição e cada lição nos torna melhores.”</h1>
+       <h1> Game of Thrones</h1>
+       <h2> Lupin</h2>
+       <h2> Vincenzo</h2>
+       <h2> The Umbrella Academy</h2>
+       <h2> Warrior Nun</h2>
+       <h2> Carta ao Rei</h2>
+       <h2> Peaky Blinders: Sangue, Apostas e Navalhas </h2>
+       <h2> Shadowhunters: The Mortal Instruments</h2>
+       <h2> The Witcher</h2>
+       <h2> La Casa de Papel</h2>
+       <h2> Templários</h2>
 </body>
 </html>
