--- a/pagina02.html
+++ b/pagina02.html
@@ -13,26 +13,26 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pagina01.html">Ação</a></li>
-            <li><a href="pagina02.html">Aventura</a></li>
-            <li><a href="pagina03.html">Animação</a></li>
-            <li><a href="pagina04.html">Romance</a></li>
+            <li><a href="pagina02.html">Drama</a></li>
+            <li><a href="pagina03.html">Comédia</a></li>
+            <li><a href="pagina04.html">Fantasia</a></li>
           </ul>
         </nav>
     </div>
     <div class="conteudo">
-      <h1>"Você pode encontrar as coisas que perdeu, mas nunca as que abandonou."<h1>
-        <h1>Senhor dos aneis<h1>
-        <h2> O Senhor dos Anéis - O Retorno do Rei</h2>
-        <h2> De Volta para o Futuro</h2>
-        <h2> Star Wars: O Império Contra-ataca</h2>
-        <h2> Harry Potter e as Relíquias da Morte - Parte 2</h2>
-        <h2> Jurassic Park - Parque dos Dinossauros</h2>
-        <h2> Além da Escuridão - Star Trek</h2>
-        <h2> Indiana Jones e a Última Cruzada</h2>
-        <h2> Sherlock Holmes - O Jogo de Sombras</h2>
-        <h2> O Regresso</h2>
-        <h2> As Crônicas de Nárnia - O Leão, a Feiticeira e o Guarda-Roupa</h2>
-        <h2> Jurassic World - O Mundo dos Dinossauros</h2>
+      <h1>“A vida vale a pena, desde que haja riso nela.”<h1>
+        <h1>Anne With an E<h1>
+        <h2> The Crown</h2>
+        <h2> After Life</h2>
+        <h2> Sex Education</h2>
+        <h2> Elite</h2>
+        <h2> Tempos de Guerra</h2>
+        <h2> O Gambito da Rainha</h2>
+        <h2> Nada Ortodoxa</h2>
+        <h2> Young Royals</h2>
+        <h2> As Telefonistas</h2>
+        <h2> As Telefonistas</h2>
+        <h2> Spin Out</h2>
 
 </body>
 </html>
