--- a/pagina03.html
+++ b/pagina03.html
@@ -13,27 +13,27 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pagina01.html">Ação</a></li>
-            <li><a href="pagina02.html">Aventura</a></li>
-            <li><a href="pagina03.html">Animação</a></li>
-            <li><a href="pagina04.html">Romance</a></li>
+            <li><a href="pagina02.html">Drama</a></li>
+            <li><a href="pagina03.html">Comédia</a></li>
+            <li><a href="pagina04.html">Fantasia</a></li>
           </ul>
         </nav>
     </div>
   <div class="conteudo">
-    <h1>“Hakuna Matata. Significa ‘sem preocupações’.”<h1>
-      <h1>O Rei Leão<h1>
-     <h2> O Rei Leão</h2>
-     <h2> Viva - A Vida é uma Festa</h2>
-     <h2> Toy Story - Um Mundo de Aventuras</h2>
-     <h2> A Bela e a Fera</h2>
-     <h2> DivertidaMente</h2>
-     <h2> Wall-E</h2>
-     <h2> Procurando Nemo</h2>
-     <h2> Up - Altas Aventuras</h2>
-     <h2> Como Treinar o seu Dragão</h2>
-     <h2> Monstros S.A.</h2>
-     <h2> Your Name</h2>
-     <h2> Shrek</h2>
-     <h2> Meu Malvado Favorito</h2>
+    <h1>"Bem-vinda ao mundo real. É uma droga. Você vai amar"<h1>
+      <h1>Friends<h1>
+     <h2> Suits</h2>
+     <h2> How I Met Your Mother</h2>
+     <h2> Todo Mundo Odeia o Chris</h2>
+     <h2> The Big Bang Theory</h2>
+     <h2> Eu, a Patroa e as Crianças</h2>
+     <h2> Brooklyn Nine-Nine</h2>
+     <h2> Um Maluco no Pedaço</h2>
+     <h2> Modern Family</h2>
+     <h2> Orange Is the New Black</h2>
+     <h2> The Ranch</h2>
+     <h2> Atypical</h2>
+     <h2> The Office (US)</h2>
+     <h2> Friends</h2>
 </body>
 </html>
