--- a/pagina04.html
+++ b/pagina04.html
@@ -13,31 +13,31 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pagina01.html">Ação</a></li>
-            <li><a href="pagina02.html">Aventura</a></li>
-            <li><a href="pagina03.html">Animação</a></li>
-            <li><a href="pagina04.html">Romance</a></li>
+            <li><a href="pagina02.html">Drama</a></li>
+            <li><a href="pagina03.html">Comédia</a></li>
+            <li><a href="pagina04.html">Fantasia</a></li>
           </ul>
         </nav>
      </div>
      <div class="conteudo">
-       <h1>“Eu li centenas de romances na minha vida, a maioria deles alegando que o amor era o centro do universo, que poderia curar qualquer dano dentro de nós. Isso é o que precisamos para sobreviver.”</h1>
-       <h1> After</h1>
+       <h1>"O que está feito, está feito. O que interessa é que estamos juntos. Agora cale a boca e beba a sua cerveja", Dean.</h1>
+       <h1> Supernatural</h1>
 
-       <h2> Continência ao Amor</h2>
-       <h2> After</h2>
-       <h2> Como Eu Era Antes de Você</h2>
-       <h2> Através da Minha Janela</h2>
-       <h2> Titanic</h2>
-       <h2> Simplesmente Acontece</h2>
-       <h2> Orgulho e Preconceito</h2>
-       <h2> Amor a Toda Prova</h2>
-       <h2> A Cinco Passos de Você</h2>
-       <h2> A Bela e a Fera</h2>
-       <h2> Um Amor para Recordar</h2>
-       <h2> Uma Linda Mulher</h2>
-       <h2> Como Se Fosse a Primeira Vez</h2>
-       <h2> Diário de uma Paixão</h2>
-       <h2> As Vantagens de Ser Invisível</h2>
+       <h2> House of the Dragon</h2>
+       <h2> Fate: A Saga Winx</h2>
+       <h2> Stranger Things</h2>
+       <h2> American Horror Story</h2>
+       <h2> Resurrection</h2>
+       <h2> Supernatural</h2>
+       <h2> The Vampire Diaries</h2>
+       <h2> The Originals</h2>
+       <h2> Legacies</h2>
+       <h2> Teen Wolf</h2>
+       <h2> The Winchesters</h2>
+       <h2> Vampire Academy</h2>
+       <h2> Lucifer</h2>
+       <h2> Outlander</h2>
+       <h2> Once Upon a Time</h2>
 
 
 </body>
